added chess api

--- a/de.htwg.wt.chess/app/views/index.scala.html
+++ b/de.htwg.wt.chess/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(message: String)
+@(message: String)(controller: de.htwg.chess.controller.IChessController)
 
 @main("Welcome to Play Framework") {
 
