--- a/de.htwg.wt.chess/app/views/index.scala.html
+++ b/de.htwg.wt.chess/app/views/index.scala.html
@@ -2,14 +2,25 @@
 
 @main("Welcome to Chess") {
 
+
     <div class="well">
         <h3>Status: @controller.getStatusMessage()</h3>
         <h3>Turn: @controller.getTurnMessage()</h3>
+		<div class="playground">
+	        @for(row <- controller.getFieldSize-1 to 0 by -1) {
+	        	<div class="row@row">
+	        	
+	        		@for(column <- 0 until controller.getFieldSize) {
+	        			@defining(if ((column+row) % 2 == 0) "dark" else "light") { fieldColor =>
+	        				<div class="field @fieldColor @controller.getFieldValue(column, row)"></div>
+	        			}
+	        		}
+	        		
+	        		<div class="clear"></div>
+	        	</div>
+	        }
+        </div>
         
-        @for(line <- controller.toString().split("\n")) {
-			@line<br>
-  		}
     </div>
-
-
+    
 }
