--- a/de.htwg.wt.chess/app/views/main.scala.html
+++ b/de.htwg.wt.chess/app/views/main.scala.html
@@ -2,18 +2,29 @@
 
 <!DOCTYPE html>
 <html>
+
 	<head>
 	    <title>@title</title>
+	    
 	    <link rel='shortcut icon' type='image/png' href='@routes.Assets.at("images/favicon.png")'>
-	    <link rel='stylesheet' href='@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.css"))'>
-	    <link rel='stylesheet' href='@routes.Assets.at("stylesheets/chess.css")'>
-	    <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
+    	<script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
+	    
+	    <!-- Bootstrap css -->
+		<link rel='stylesheet' href='@routes.Assets.at("stylesheets/bootstrap.min.css")'>
+		
+		<!-- Optional theme -->
+		<link rel='stylesheet' href='@routes.Assets.at("stylesheets/bootstrap-theme.min.css")'>
+		
+		<!-- Latest compiled and minified JavaScript -->
+		<script src='@routes.Assets.at("javascripts/bootstrap.min.js")'></script>
+		
 	    <style>
-	    body {
-	        margin-top: 50px;
-	    }
+		    body {
+		        margin-top: 50px;
+		    }
 	    </style>
 	</head>
+	
 	<body>
 	    <div class="navbar navbar-fixed-top">
 	        <div class="navbar-inner">
@@ -26,4 +37,5 @@
 	        @content
 	    </div>
 	</body>
+	
 </html>
