--- a/de.htwg.wt.chess/app/views/main.scala.html
+++ b/de.htwg.wt.chess/app/views/main.scala.html
@@ -20,22 +20,37 @@
 		
 	    <style>
 		    body {
-		        margin-top: 50px;
+		        padding-top: 70px;
 		    }
 	    </style>
 	</head>
 	
 	<body>
-	    <div class="navbar navbar-fixed-top">
-	        <div class="navbar-inner">
-	            <div class="container-fluid">
-	                <a id="titleLink" class="brand" href="/">@title</a>
-	            </div>
-	        </div>
-	    </div>
-	    <div class="container">
-	        @content
-	    </div>
+		<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+			<div class="container">
+				<!-- toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+			        	<span class="sr-only">Toggle navigation</span>
+			            <span class="icon-bar"></span>
+			            <span class="icon-bar"></span>
+			            <span class="icon-bar"></span>
+			    	</button>
+			    	<a class="navbar-brand" href="/">Chess</a>
+				</div>
+				<div class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+			        	<li class="active"><a href="/">Home</a></li>
+			            <li><a href="chess">Play Chess</a></li>
+			            <li><a href="contact">Contact</a></li>
+			     	</ul>
+				</div>
+			</div>
+		</div>
+	  	
+	  	<div class="container" role="main">
+			@content
+		</div>
 	</body>
 	
 </html>
