handle active navigation

--- a/de.htwg.wt.chess/app/views/main.scala.html
+++ b/de.htwg.wt.chess/app/views/main.scala.html
@@ -18,6 +18,8 @@
 		<!-- Latest compiled and minified JavaScript -->
 		<script src='@routes.Assets.at("javascripts/bootstrap.min.js")'></script>
 		
+		<script src='@routes.Assets.at("javascripts/index.js")'></script>
+		
 	    <style>
 		    body {
 		        padding-top: 70px;
@@ -41,8 +43,8 @@
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 			        	<li class="active"><a href="/">Home</a></li>
-			            <li><a href="chess">Play Chess</a></li>
-			            <li><a href="contact">Contact</a></li>
+			            <li><a href="/chess">Play Chess</a></li>
+			            <li><a href="/contact">Contact</a></li>
 			     	</ul>
 				</div>
 			</div>
