--- a/de.htwg.wt.chess/app/views/chess.scala.html
+++ b/de.htwg.wt.chess/app/views/chess.scala.html
@@ -3,26 +3,26 @@
 @main("Play Chess") {
 
 	<link rel='stylesheet' href='@routes.Assets.at("stylesheets/chess.css")' />
+	<script type='text/javascript' src='@routes.Assets.at("javascripts/chess.js")'></script>
 	
-    <div class="well">
-        <h3>Status: @controller.getStatusMessage()</h3>
-        <h3>Turn: @controller.getTurnMessage()</h3>
-        
-		<div class="playground">
-	        @for(row <- controller.getFieldSize-1 to 0 by -1) {
-	        	<div class="row@row">
-	        	
-	        		@for(column <- 0 until controller.getFieldSize) {
-	        			@defining(if ((column+row) % 2 == 0) "dark" else "light") { fieldColor =>
-	        				<div class="field @fieldColor @controller.getFieldValue(column, row)"></div>
-	        			}
-	        		}
-	        		
-	        		<div class="clear"></div>
-	        	</div>
-	        }
-        </div>
-        
+	<div class="well">
+	    <div id="gameContent">
+	    	<h3>Status: @controller.getStatusMessage()</h3>
+	        <h3>Turn: @controller.getTurnMessage()</h3>
+	        
+			<div id="playground">
+		        @for(row <- controller.getFieldSize-1 to 0 by -1) {
+		        	@for(column <- 0 until controller.getFieldSize) {
+		        		@defining(if ((column+row) % 2 == 0) "dark" else "light") { fieldColor =>
+		        			<div id="pos@column@row" class="field @fieldColor @controller.getFieldValue(column, row)" 
+		        				onclick="handleMovement(@column, @row)"></div>
+		        		}
+		        	}
+					<div class="clear"></div>
+		        }
+	        </div>
+	        
+	    </div>
     </div>
     
 }
