--- a/de.htwg.wt.chess/app/views/main.scala.html
+++ b/de.htwg.wt.chess/app/views/main.scala.html
@@ -50,7 +50,7 @@
 			</div>
 		</div>
 	  	
-	  	<div class="container" role="main">
+	  	<div id="pageContent" class="container" role="main">
 			@content
 		</div>
 	</body>
