--- a/de.htwg.wt.chess/public/stylesheets/chess.css
+++ b/de.htwg.wt.chess/public/stylesheets/chess.css
@@ -1,5 +1,4 @@
-
-.playground {
+#playground {
 	margin-left: auto;
 	margin-right: auto;
 	width: 512px;
@@ -9,6 +8,12 @@
 	float: left;
 	width: 64px;
 	height: 64px;
+}
+
+.selected {
+	border-style: solid;
+	border-width: 3px;
+	background-origin: border-box;
 }
 
 .dark {
