--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,16 +9,12 @@
 	    <link rel='shortcut icon' type='image/png' href='@routes.Assets.at("images/favicon.png")'>
     	<script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
 	    
-	    <!-- Bootstrap css -->
+	    <!-- Bootstrap -->
 		<link rel='stylesheet' href='@routes.Assets.at("stylesheets/bootstrap.min.css")'>
-		
-		<!-- Optional theme -->
 		<link rel='stylesheet' href='@routes.Assets.at("stylesheets/bootstrap-theme.min.css")'>
+		<script type='text/javascript' src='@routes.Assets.at("javascripts/bootstrap.min.js")'></script>
 		
-		<!-- Latest compiled and minified JavaScript -->
-		<script src='@routes.Assets.at("javascripts/bootstrap.min.js")'></script>
-		
-		<script src='@routes.Assets.at("javascripts/index.js")'></script>
+		<script type='text/javascript' src='@routes.Assets.at("javascripts/index.js")'></script>
 		
 	    <style>
 		    body {
@@ -45,6 +41,9 @@
 			        	<li class="active"><a href="/">Home</a></li>
 			            <li><a href="/chess">Play Chess</a></li>
 			            <li><a href="/contact">Contact</a></li>
+			     	</ul>
+			     	<ul class="nav navbar-nav navbar-right">
+			            <li><a href="/logout">Logout</a></li>
 			     	</ul>
 				</div>
 			</div>
