--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -38,7 +38,7 @@
 	        	</div>
 	        	-->
 	        	<button class="btn btn-primary btn-block" type="submit">Login</button>
-	        	<a href="/openID/auth" class="btn btn-block btn-social btn-google-plus">
+	        	<a href="/login/google" class="btn btn-block btn-social btn-google-plus">
 				  <i class="fa fa-google"></i>
 				  Sign in with Google
 				</a>
