--- a/app/views/chess.scala.html
+++ b/app/views/chess.scala.html
@@ -9,10 +9,20 @@
 		<button class="btn btn-default" type="button" onclick="restartGame()">Restart Game</button>
 	</p>
 	
-
 	<div class="well" id="statusMessages">
 		<h3 id="status">Status: @controller.getStatusMessage() @controller.getCheckmateMessage()</h3>
 	    <h3 id="turn">Turn: @controller.getTurnMessage()</h3>
+	</div>
+	
+	<div id="exchangeAlert" class="alert alert-info" role="alert">
+		<h4>Exchange!</h4>
+		<p>Pawn reaches end of the playground. Please choose a new Figure for the exchange:</p>
+		<p>
+			<button class="btn btn-default" type="button" onclick="exchange('knight')">Knight</button>
+			<button class="btn btn-default" type="button" onclick="exchange('bishop')">Bishop</button>
+			<button class="btn btn-default" type="button" onclick="exchange('rook')">Rook</button>
+			<button class="btn btn-default" type="button" onclick="exchange('queen')">Queen</button>
+		</p>
 	</div>
 	
     <div class="well" id="gameContent">
