--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,20 +7,17 @@
 	    <title>@title</title>
 	    
 	    <link rel='shortcut icon' type='image/png' href='@routes.Assets.at("images/favicon.png")'>
+	    
+	    <!-- jQuery -->
     	<script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
 	    
 	    <!-- Bootstrap -->
-		<link rel='stylesheet' href='@routes.Assets.at("stylesheets/bootstrap.min.css")'>
+	    <link rel='stylesheet' href='@routes.Assets.at("stylesheets/bootstrap.min.css")'>
 		<link rel='stylesheet' href='@routes.Assets.at("stylesheets/bootstrap-theme.min.css")'>
 		<script type='text/javascript' src='@routes.Assets.at("javascripts/bootstrap.min.js")'></script>
-		
-		<script type='text/javascript' src='@routes.Assets.at("javascripts/index.js")'></script>
-		
-	    <style>
-		    body {
-		        padding-top: 70px;
-		    }
-	    </style>
+
+		<link rel='stylesheet' href='@routes.Assets.at("stylesheets/main.css")'>		
+		<script type='text/javascript' src='@routes.Assets.at("javascripts/main.js")'></script>
 	</head>
 	
 	<body>
