--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,7 +1,6 @@
 body {
 	padding-top: 70px;
-	background:
-		url(../images/background.jpg) no-repeat center center fixed;
+	background: url(../images/background.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
