--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,8 +1,25 @@
 body {
 	padding-top: 70px;
+	padding-bottom: 20px;
 	background: url(../images/background.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+}
+
+h4 {
+	font-size: 17px;
+}
+
+.page-header h1 {
+	color: white;
+}
+
+.page-header small {
+	color: #847051;
+}
+
+.headline {
+	color: white;
 }
