--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,7 +2,11 @@
 
 	<div class="jumbotron">
 		<h1>Welcome to Chess</h1>
-		<p>A simple chess game!</p>
+		<p>
+			Chess is a two-player strategy board game played on a chessboard,
+			a checkered gameboard with 64 squares arranged in an eight-by-eight grid.
+			It is one of the world's most popular games, played by millions of people worldwide.
+		</p>
 		<p><a href="chess" class="btn btn-primary btn-lg" role="button">Play Now!</a></p>
 	</div>
 }
