--- a/app/views/rules.scala.html
+++ b/app/views/rules.scala.html
@@ -23,9 +23,9 @@
 					one queen, two rooks, two bishops, two knights and eight pawns. One player, referred to as
 					White, controls the white pieces and the other player, Black, controls the black pieces; White is always the first player to move.
 					The colors are chosen either by a friendly agreement, by a game of chance or by a tournament director.
-					The players alternate moving one piece at a time (with the exception of castling, when two pieces are moved at the same time).
+					The players alternate moving one piece at a time (with the exception of <a href="#castling">castling</a>, when two pieces are moved at the same time).
 					Pieces are moved to either an unoccupied square, or one occupied by an opponent's piece, capturing it and removing it from play.
-					With one exception (en passant), all pieces capture opponent's pieces by moving to the square that the opponent's piece occupies.
+					With one exception <a href="#passant">(en passant)</a>, all pieces capture opponent's pieces by moving to the square that the opponent's piece occupies.
 				</h4>
 			</div>
 		</div>
@@ -42,7 +42,7 @@
 			<div class="well">
 				<h4>
 					The king moves exactly one square horizontally, vertically, or diagonally.
-					A special move with the king known as castling <!-- LINK --> is allowed only once per player, per game (see below).
+					A special move with the king known as <a href="#castling">castling</a> is allowed only once per player, per game (see below).
 				</h4>
 			</div>
 			
@@ -50,7 +50,7 @@
 			<div class="well">
 				<h4>
 					The rook moves any number of vacant squares vertically or horizontally
-					(it is also involved in the king's special move of castling<!-- LINK -->).
+					(it is also involved in the king's special move of <a href="#castling">castling</a>).
 				</h4>
 			</div>
 			
