--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -7,6 +7,6 @@
 			a checkered gameboard with 64 squares arranged in an eight-by-eight grid.
 			It is one of the world's most popular games, played by millions of people worldwide.
 		</p>
-		<p><a href="chess" class="btn btn-primary btn-lg" role="button">Play Now!</a></p>
+		<p><a href="play" class="btn btn-primary btn-lg" role="button">Play Now!</a></p>
 	</div>
 }
