--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -6,10 +6,10 @@
 	<head>
 		<title>Login to Chess</title>
 		
-		<script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
-		<script type='text/javascript' src='@routes.Assets.at("javascripts/bootstrap.min.js")'></script>
-		<link rel='stylesheet' href='@routes.Assets.at("stylesheets/bootstrap.min.css")'>
-		<link rel='stylesheet' href='@routes.Assets.at("stylesheets/bootstrap-theme.min.css")'>
+		<script type='text/javascript' src='//code.jquery.com/jquery-1.11.2.min.js'></script>
+		<script type='text/javascript' src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js'></script>
+		<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css'>
+		<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css'>
 		<link rel='stylesheet' href='@routes.Assets.at("stylesheets/bootstrap-social.css")'>
 		<link rel='stylesheet' href='@routes.Assets.at("stylesheets/login.css")'>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
