--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,12 +9,12 @@
 	    <link rel='shortcut icon' type='image/png' href='@routes.Assets.at("images/favicon.png")'>
 	    
 	    <!-- jQuery -->
-    	<script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
+		<script type='text/javascript' src='//code.jquery.com/jquery-1.11.2.min.js'></script>
 	    
 	    <!-- Bootstrap -->
-	    <link rel='stylesheet' href='@routes.Assets.at("stylesheets/bootstrap.min.css")'>
-		<link rel='stylesheet' href='@routes.Assets.at("stylesheets/bootstrap-theme.min.css")'>
-		<script type='text/javascript' src='@routes.Assets.at("javascripts/bootstrap.min.js")'></script>
+		<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css'>
+		<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css'>
+		<script type='text/javascript' src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js'></script>
 
 		<link rel='stylesheet' href='@routes.Assets.at("stylesheets/main.css")'>		
 		<script type='text/javascript' src='@routes.Assets.at("javascripts/main.js")'></script>
@@ -36,7 +36,7 @@
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 			        	<li class="active"><a href="/">Home</a></li>
-			            <li><a href="/chess">Play Chess</a></li>
+			            <li><a href="/play">Play Chess</a></li>
 			            <li class="dropdown">
 					        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Rules<span class="caret"></span></a>
 					        <ul class="dropdown-menu" role="menu">
