--- a/app/views/chess.scala.html
+++ b/app/views/chess.scala.html
@@ -27,6 +27,7 @@
 				<p id="modalGameInfoContent"></p>
 			</div>
 			<div class="modal-footer">
+				<a href="/play" class="btn btn-primary">Back to lobby</a>
 				<button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
 			</div>
 		</div>
