--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,7 +7,7 @@
 	    <title>@title</title>
 	    
 	    <link rel='shortcut icon' type='image/png' href='@routes.Assets.at("images/favicon.png")'>
-	    
+
 	    <!-- jQuery -->
 		<script type='text/javascript' src='//code.jquery.com/jquery-1.11.2.min.js'></script>
 	    
@@ -18,6 +18,17 @@
 
 		<link rel='stylesheet' href='@routes.Assets.at("stylesheets/main.css")'>		
 		<script type='text/javascript' src='@routes.Assets.at("javascripts/main.js")'></script>
+		<script type="text/javascript">
+			$(function() {
+				@if(session.get("email") != null) {
+					$("#login").hide();
+					$("#logout").show();
+				} else {
+					$("#login").show();
+					$("#logout").hide();
+				} 
+			})
+		</script>
 	</head>
 	
 	<body>
@@ -49,7 +60,8 @@
 						</li>
 			     	</ul>
 			     	<ul class="nav navbar-nav navbar-right">
-			            <li><a href="/logout">Logout</a></li>
+							<li id="login"><a href="/login">Login</a></li>
+			            	<li id="logout"><a href="/logout">Logout</a></li>
 			     	</ul>
 				</div>
 			</div>
