--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -20,7 +20,7 @@
 		<script type='text/javascript' src='@routes.Assets.at("javascripts/main.js")'></script>
 		<script type="text/javascript">
 			$(function() {
-				@if(session.get("email") != null) {
+				@if(session.contains("email")) {
 					$("#login").hide();
 					$("#logout").show();
 				} else {
