--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -68,6 +68,24 @@
 		</div>
 	  	
 	  	<div id="pageContent" class="container" role="main">
+	  		@if(flash.contains("success")) {
+	  			<div class="alert alert-success alert-dismissible fade in" role="alert">
+				 	<button type="button" class="close" data-dismiss="alert">
+						<span aria-hidden="true">&times;</span>
+				  		<span class="sr-only">Close</span>
+				  	</button>
+			    	<b>@flash.get("success")</b>
+			    </div>
+	  		}
+	  		@if(flash.contains("error")) {
+	  			<div class="alert alert-danger alert-dismissible fade in" role="alert">
+				 	<button type="button" class="close" data-dismiss="alert">
+						<span aria-hidden="true">&times;</span>
+				  		<span class="sr-only">Close</span>
+				  	</button>
+			    	<b>@flash.get("error")</b>
+			    </div>
+	  		}
 			@content
 		</div>
 	</body>
