added glyphicon for login and logout

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -60,8 +60,8 @@
 						</li>
 			     	</ul>
 			     	<ul class="nav navbar-nav navbar-right">
-							<li id="login"><a href="/login">Login</a></li>
-			            	<li id="logout"><a href="/logout">Logout</a></li>
+							<li id="login"><a href="/login"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> Login</a></li>
+			            	<li id="logout"><a href="/logout"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Logout</a></li>
 			     	</ul>
 				</div>
 			</div>
