--- a/app/views/wait.scala.html
+++ b/app/views/wait.scala.html
@@ -1,3 +1,28 @@
+<link rel='stylesheet' href='@routes.Assets.at("stylesheets/spinner.css")'>
+
 <div class="well">
 	<h1 class="text-center">Waiting for opponent!</h1>
+</div>
+
+<div class="overlay"></div>
+
+<div class="spinner">
+	<div class="spinner-container container1">
+		<div class="circle1"></div>
+		<div class="circle2"></div>
+		<div class="circle3"></div>
+		<div class="circle4"></div>
+	</div>
+	<div class="spinner-container container2">
+		<div class="circle1"></div>
+		<div class="circle2"></div>
+		<div class="circle3"></div>
+		<div class="circle4"></div>
+	</div>
+	<div class="spinner-container container3">
+		<div class="circle1"></div>
+		<div class="circle2"></div>
+		<div class="circle3"></div>
+		<div class="circle4"></div>
+	</div>
 </div>
