--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -27,3 +27,13 @@ h4 {
 .panel-title {
 	font-size: 20px;
 }
+
+.overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: black;
+	opacity: 0.5;
+}
