--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,6 +8,9 @@
 	    
 	    <link rel='shortcut icon' type='image/png' href='@routes.Assets.at("images/favicon.png")'>
 
+		<!-- Web components -->
+		<script src='@routes.Assets.at("bower_components/webcomponentsjs/webcomponents.min.js")'></script>
+
 	    <!-- jQuery -->
 		<script type='text/javascript' src='//code.jquery.com/jquery-1.11.2.min.js'></script>
 	    
@@ -18,6 +21,7 @@
 
 		<link rel='stylesheet' href='@routes.Assets.at("stylesheets/main.css")'>		
 		<script type='text/javascript' src='@routes.Assets.at("javascripts/main.js")'></script>
+		
 		<script type="text/javascript">
 			$(function() {
 				@if(session.contains("email")) {
